--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Groups#index</h1>
-<p>Find me in app/views/groups/index.html.erb</p>
+
+<% if user_signed_in? %>
+        <%= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
+<% end %>
+
+<div>
+    <div>
+        <span>You Signed in as: <%= @user.name %></span>
+    </div>
+
+    <div>
+        <% @groups.each do |group| %>
+          <div><%= link_to group.name, group_expenses_path(group) %></div>
+          <div><%= group.icon %></div>
+          <div><%= group.group_expenses.sum { |ge| ge.group.amount } %></div>
+        <% end %>
+    </div>
+    <div>
+        <%= link_to 'Add a New Category', new_group_path %>
+    </div>
+</div>
