--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,2 +1,34 @@
-<h1>Expenses#index</h1>
-<p>Find me in app/views/expenses/index.html.erb</p>
+<div>
+  <div>
+    <%= link_to "Back", authenticated_root_path %>
+  </div>
+
+  <div>
+    <% if user_signed_in? %>
+        <%= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
+    <% end %>
+  </div>
+
+  <div>
+    <p>Transactions</p>
+    <div>
+      <div><img src="<% @group.icon %>"></div>
+    </div>
+    <div>
+      <p>Total Amount</p>
+      <div><%= @group.group_expenses.sum { |ge| ge.group.amount } %></div>
+    </div>
+
+    <div>
+      <% @expenses.order(created_at: :desc).each do |expense| %>
+        <div>
+          <div><%= expense.name %></div>
+          <div>$ <%= expense.amount %></div>
+        </div>
+    </div>
+  </div>
+
+    <div>
+        <%= link_to 'Add a New Transaction', new_group_expense_path(params[:group_id]) %>
+    </div>
+<div>
