--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -8,7 +8,7 @@
         </div>
         <div>
             <%= form.label :icon %>
-            <%= form.text_field :icon %>
+            <%= form.file_field :icon %>
         </div>
         <div>
             <%= form.submit "Save" %>
