--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <p class="notice" style="color:green;"><%= notice %></p>
+    <p class="alert" style="color:red;"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
