--- a/app/views/users/splash.html.erb
+++ b/app/views/users/splash.html.erb
@@ -1,10 +1,12 @@
-<div>
+<div class="d-flex flex-column justify-content-center align-items-center p-10">
     <div>
-        <%= image_tag 'logo.png' %>
+      <%= image_tag 'logo.png' %>
     </div>
-
-    <div>
-        <%= button_to "Sign In", new_user_session_path, method: :get %>
-        <%= button_to "Sign Up", new_user_registration_path, method: :get %>
+    <div class="mt-3">
+      <h2>Sohaib Budget</h1>
     </div>
-</div>
+    <div class="d-flex m-2 gap-3 mt-3">
+      <%= button_to "Sign In", new_user_session_path, method: :get, class: 'btn btn-success' %>
+      <%= button_to "Sign Up", new_user_registration_path, method: :get, class: 'btn btn-primary' %>
+    </div>
+</main>
