--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,7 +8,7 @@
         <span>You Signed in as: <%= @user.name %></span>
     </div>
 
-    <div class="mb-3 ms-3 me-3">
+    <div class="d-flex flex-column gap-2 mb-3 ms-3 me-3">
         <% @groups.each do |group| %>
           <div class="d-flex flex-row gap-3 border border-primary">
             <div>
