--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,16 +1,16 @@
 <div>
-    <div class="mb-3">
+    <div class="mb-3 ms-2">
       <% if user_signed_in? %>
-        <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'btn btn-primary'%>
+        <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'btn btn-outline-primary'%>
       <% end %>
     </div>
-    <div class="mb-3">
-        <span>You Signed in as: <%= @user.name %></span>
+    <div class="ms-3 mb-3">
+        <h6>You Signed in as: <%= @user.name %></h6>
     </div>
 
     <div class="d-flex flex-column gap-2 mb-3 ms-3 me-3">
         <% @groups.each do |group| %>
-          <div class="d-flex flex-row gap-3 border border-primary">
+          <div class="d-flex flex-row gap-3 border border-primary p-1">
             <div>
                 <img src="<%= group.icon %>">
             </div>
