--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="child">
-    <%= link_to "Back", authenticated_root_path %>
+    <div class="mb-3">
+      <%= button_to "Back", authenticated_root_path, method: :get, class: 'btn btn-outline-primary'%>
+    </div>
     <div class="text-center">
       <h2>Add a New Category </h2>
     </div>
