--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="child">
+  <div class="child mt-4">
     <div class="mb-3">
       <%= button_to "Back", authenticated_root_path, method: :get, class: 'btn btn-outline-primary'%>
     </div>
