--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="child">
+  <div class="child mt-2">
     <div class="text-center mb-3">
       <h2>Sign up</h2>
     </div>
