--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,21 +1,25 @@
 <div>
-  <div class="d-flex justify-content-between">
-    <div class="ms-2">
-      <%= button_to "Back", authenticated_root_path, method: :get, class: 'btn btn-outline-primary' %>
-    </div>
+  <div class="bg-primary nav">
+    <div class="d-flex justify-content-center align-items-center gap-5">
+      <div class="ms-4">
+        <%= link_to "Back", authenticated_root_path, class:'text-white' %>
+      </div>
 
-    <div class="mb-3 me-2">
-      <% if user_signed_in? %>
-          <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'btn btn-outline-primary' %>
-      <% end %>
+      <div class="ms-3">
+        <h3 class="text-white">Transactions</h3>
+      </div>
+
+      <div class="ms-2">
+        <% if user_signed_in? %>
+            <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: "btn btn-primary" %>
+        <% end %>
+      </div>
     </div>
   </div>
   <div>
-    <div class="text-center">
-      <h3>Transactions</h3>
-    </div>
-    <div class="ms-3">
-      Icon:<img src="<%= @group.icon %>", alt="group-image", style="width:60px; height:60px;">
+
+    <div class="ms-3 mt-3 mb-3">
+      Icon: <img src="<%= @group.icon %>", alt="group-image", style="width:60px; height:60px;">
     </div>
     <div class="ms-3 mb-3">
       <h6>Total Amount: <%= @group.expenses.sum(:amount) %> $</h6>
