--- a/app/views/users/splash.html.erb
+++ b/app/views/users/splash.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column justify-content-center align-items-center p-10">
+<div class="d-flex flex-column justify-content-center align-items-center p-10 mt-5">
     <div>
       <%= image_tag ("logo.png") %>
     </div>
