--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -15,14 +15,20 @@
 
   <div class="d-flex flex-column gap-2 mb-3 ms-3 me-3">
       <% @groups.each do |group| %>
-        <div class="d-flex flex-row gap-3 border border-primary p-1">
+        <div class="d-flex flex-row gap-3 border border-primary p-3">
           <div>
-              <img src="<%= group.icon %>", alt="group-image", style="width:60px; height:60px;">
+            <% if group.icon.attached? %>
+              <img src="<%=(url_for(group.icon)) %>", alt="group-image", style="width:60px; height:60px;">
+            <% end %>
           </div>
-          <div>
+          <div class="d-flex gap-5">
+            <div>
               <div><%= link_to group.name, group_expenses_path(group) %></div>
-              <div><%= group.expenses.sum(:amount) %> $</div>
               <div><%= group.created_at.strftime("%d %b %Y") %></div>
+            </div>
+            <div class="mt-3 ms-5">
+               <div>$ <%= group.expenses.sum(:amount) %></div>
+            </div>
           </div>
         </div>
       <% end %>
