--- a/app/views/users/splash.html.erb
+++ b/app/views/users/splash.html.erb
@@ -9,4 +9,4 @@
       <%= button_to "Sign In", new_user_session_path, method: :get, class: 'btn btn-success' %>
       <%= button_to "Sign Up", new_user_registration_path, method: :get, class: 'btn btn-primary' %>
     </div>
-</main>
+</div>
